# ConteoVePa

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  CASOS_USO.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  LICENSE.md  MLFLOW_INTEGRATION.md  Makefile  README.md  conteo  conteo.pub  final  final.pub  launch_mlflow_ui.py  mlflow_ui.bat  mlflow_ui_simple.py  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt  streamlit_app.py
clients/: grpc_client.py
proto/: vehicle.proto  vehicle_pb2.py  vehicle_pb2_grpc.py
reports/: Registro.csv  dfgd.csv  dfgdftg.csv  dfgdg.csv  gewr.csv  ghglh.csv  gyjg.csv  gyug.csv  hgyo.csv  hjlgh.csv  prueba.csv  prueba2.csv  reporte_20250928_142345_20250928_142344_9.mp4.csv  reporte_20250928_144906_20250928_144906_9.mp4.csv
resultados/: Registro.csv
services/: inference_server.py
src/: app.py  cli.py  config.py  counter.py  detector.py  mlflow_integration.py  processor.py  ui_app.py  utils.py
temp_model/: metadata.json
tests/: conftest.py  test_app_csv.py  test_cli.py  test_counter.py  test_detector_mapping.py  test_grpc_services.py  test_headless_integration.py  test_mlflow_integration.py  test_streamlit_app.py  test_ui_app.py  test_utils.py
